updating bower file and app config

--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -1,6 +1,6 @@
 {
-  "appname": "XXXXX",
-  "ocscope": "BuyerReader",
-  "clientid": "XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXX",
-  "buyerid": "XXXXX"
+  "appname": "Northern Lights Bicycle Co.",
+  "ocscope": "FullAccess",
+  "clientid": "32B3A0DB-9409-449E-9B25-D9AC6342849F",
+  "buyerid": ""
 }
