--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "OrderCloud-Components",
+  "name": "ordercloud-components",
   "authors": [
     "Four51"
   ],
@@ -41,6 +41,6 @@
     "angular-mocks": "^1.5.0"
   },
   "resolutions": {
-    "angular": "1.5.2"
+    "angular": "1.5.5"
   }
 }
