adding buyer components

--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -2,5 +2,5 @@
   "appname": "Northern Lights Bicycle Co.",
   "ocscope": "FullAccess",
   "clientid": "32B3A0DB-9409-449E-9B25-D9AC6342849F",
-  "buyerid": ""
+  "buyerid": "NLBikes"
 }
